--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/media.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/media.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
     </style>
@@ -20,10 +20,29 @@
                     <img src="./assets/img/logo.png" alt="">
                 </a>
             </div>
-            <div class="header-icons">
+            <div id="hamburgher" class="header-icons">
                 <a href="#">
                     <i class="fa-solid fa-bars text-white"></i>
                 </a>
+            </div>
+            <div class="header-icons-desktop">
+                <ul>
+                    <li>
+                        <a href="">Planning</a>
+                    </li>
+                    <li>
+                        <a href="">Testimonials</a>
+                    </li>
+                    <li>
+                        <a href="">Features</a>
+                    </li>
+                    <li>
+                        <a href="">About us</a>
+                    </li>
+                    <li id="get-start">
+                        <a class="button-small white" href="">Get Started</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
@@ -32,7 +51,7 @@
         <!-- blu cards -->
         <section id="blu-card" class="flex column">
             <div class="card card-A bluet flex column">
-                <div>
+                <div id="text">
                     <h3 class="text-blu margin-up-down">Get a demo application</h3>
                     <p class="margin-up-down">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus laboriosam architecto mollitia incidunt doloribus ratione, tempora alias ullam veritatis. Illo illum temporibus laboriosam voluptas sunt, est quasi neque nostrum amet.
@@ -46,7 +65,7 @@
                         </span>
                     </div>
                 </div>
-                <div>
+                <div id="img">
                     <img src="./assets/img/phone.png" alt="">
                 </div>
                 
@@ -91,13 +110,13 @@
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam quisquam adipisci, repudiandae, exercitationem corporis similique maxime vero possimus voluptatum incidunt dolore, laudantium odio voluptatibus. Doloribus ex omnis perferendis perspiciatis! Magni.
                     </p>
                 </div>
-                <div class="card white center">
+                <div id="card-white" class="card white center">
                     <img class="margin-up-down" src="./assets/img/planning2.png" alt="">
                     <h3 class="margin-up-down">App Development</h3>
                     <p class="margin-up-down">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis aliquid perspiciatis voluptatem dignissimos odit a, explicabo mollitia saepe laboriosam, voluptatum libero tenetur veniam. Iure unde quaerat exercitationem totam facilis accusamus.
                     </p>
-                    <a class="margin-up-down" href="#">
+                    <a id="arrow-box" class="center" href="#">
                         <i id="arrow" class="fa-solid fa-arrow-down"></i>
                     </a>
                 </div>
@@ -250,11 +269,11 @@
                     </p>
                 </div>
                 <div  class="card">
-                    <div id="quote-relative">
+                    <div id="img-relative">
                         <div class="round">
                             <img src="./assets/img/about.jpg" alt="">
                         </div>
-                        <i class="fa-solid fa-quote-right text-violet "></i>
+                        <i id="quotes" class="fa-solid fa-quote-right text-violet "></i>
                     </div>
                     <h3 class="text-violet margin-up-down">
                         I help companies tindicun hting hsidfhdi oshjdf osjdfdhjdf ooosjd jdjedkfhj ujsdjdfhd
