--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
             <div class="header-icons-desktop">
                 <ul>
                     <li>
-                        <a href="">Planning</a>
+                        <a href="#piani">Planning</a>
                     </li>
                     <li>
-                        <a href="">Testimonials</a>
+                        <a href="#testimonials">Testimonials</a>
                     </li>
                     <li>
-                        <a href="">Features</a>
+                        <a href="#benefit">Features</a>
                     </li>
                     <li>
-                        <a href="">About us</a>
+                        <a href="#about">About us</a>
                     </li>
                     <li id="get-start">
-                        <a class="button-small white" href="">Get Started</a>
+                        <a class="button-small white" href="#started">Get Started</a>
                     </li>
                 </ul>
             </div>
@@ -101,7 +101,7 @@
             </div>
         </section>
         <!-- violet -->
-        <section class="violet">
+        <section id="piani" class="violet">
             <div id="planning" class="margin-up-down flex column ">
                 <div class="card">
                     <img class="margin-up-down" src="./assets/img/planning1.png" alt="">
@@ -188,7 +188,7 @@
 
         </section>
         <!-- benefits -->
-        <section  class="violet">
+        <section id="benefit" class="violet">
             <div id="benefits">
                 <h3 class="center text-white margin-up-down">Benefits of working with us</h3>
                 <div class="flex column">
